feat: breadcrumbs on direcciones envio y compra

--- a/public/PCEconomic/src/main/resources/templates/compra.html
+++ b/public/PCEconomic/src/main/resources/templates/compra.html
@@ -6,7 +6,14 @@
 <script src="https://www.paypal.com/sdk/js?client-id=test&currency=EUR"></script>
 
 <main class="container-lg bg-cont mt-md-5 mt-1 row justify-content-around p-4">
-
+    <nav aria-label="breadcrumb mt-2">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item" aria-current="page">Carrito</li>
+            <li class="breadcrumb-item" aria-current="page">Direcciones de Envio</li>
+            <li class="breadcrumb-item active" aria-current="page">Pasarela de pago</li>
+        </ol>
+    </nav>
     <h1 class="text-center mt-5 mb-5">Metodos de pago</h1>
 
     <div class="col-6">
