--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -45,7 +45,7 @@
                             </div>
 
                             <div>
-                                <h5 style="font-weight: bold">CAMBIAR NOMBRE</h5>
+                                <h5 class="font-weight-bold">CAMBIAR NOMBRE</h5>
                                 <div class="mt-2 m-1 alert alert-danger" th:if="${changeNameError != null}">
                                     <i class='bi bi-exclamation-triangle'></i>
                                     <span th:text="${changeNameError}"></span>
@@ -81,7 +81,7 @@
                             </div>
 
                             <div>
-                                <h5 style="font-weight: bold">CAMBIAR CONTRASEÑA</h5>
+                                <h5 class="font-weight-bold">CAMBIAR CONTRASEÑA</h5>
                                 <div class="mt-2 m-1 alert alert-danger" th:if="${changePasswordError != null}">
                                     <i class='bi bi-exclamation-triangle'></i>
                                     <span th:text="${changePasswordError}"></span>
@@ -120,7 +120,7 @@
                             </div>
 
                             <div>
-                                <h5 style="font-weight: bold">CAMBIAR EMAIL</h5>
+                                <h5 class="font-weight-bold">CAMBIAR EMAIL</h5>
                                 <div class="mt-2 m-1 alert alert-danger" th:if="${changeEmailError != null}">
                                     <i class='bi bi-exclamation-triangle'></i>
                                     <span th:text="${changeEmailError}"></span>
@@ -157,7 +157,7 @@
                             </div>
 
                             <div>
-                                <h5 style="font-weight: bold">CAMBIAR TELEFONO</h5>
+                                <h5 class="font-weight-bold">CAMBIAR TELEFONO</h5>
                                 <div class="mt-2 m-1 alert alert-danger" th:if="${changePhoneError != null}">
                                     <i class='bi bi-exclamation-triangle'></i>
                                     <span th:text="${changePhoneError}"></span>
