--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -167,7 +167,7 @@
                 </p>
             </div>
             <div class="col-xl-6 col-sm-12">
-                <div id="map" style="height: 300px;width: 100%;"></div>
+                <div id="map"></div>
             </div>
         </div>
 
