--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
                     <span th:text="${error}"></span>
                 </div>
 
-                <div class="m-1 alert alert-danger" id="error" style="display: none">
+                <div class="m-1 alert alert-danger display-none" id="error" >
                     <i class='bi bi-exclamation-triangle'></i>
                     <span></span>
                 </div>
