--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
                         }
                         $('#articles-recomenats').append(
                             '<a href="/article/' + prop[0].article.id + '/' + prop[0].id + '" class="col-xs-12 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
-                            '<img src="' + imgAux + '" style="width:150px; height:150px; object-fit: contain;" alt="img" class="mt-2">' +
+                            '<img src="' + imgAux + '" alt="img" class="mt-2 index-propietat-image">' +
                             '<div class="col-12 justify-content-center row">' +
                             '<div><p class="text-start h4 col-12">' + prop[0].article.nom + '</p></div>' +
                             '<span class="text-start h2 text-pc-economic-default bold col-12">' + formatCurrency(prop[0].preu) + '</span>' +
@@ -131,8 +131,8 @@
                 if (prop.esPrincipal === true) {
                     $('#articles').append(
                         '<div class="link-pc-economic-dark producte col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end justify-content-between border align-items-center text-decoration-none card-deck card align-items-start"  id="propietat' + prop.id + '" >' +
-                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none" style="max-height:100px; margin:auto; object-fit: contain;">' +
-                        '<img src="' + imgAux + '" style="max-height:100px; margin:auto; object-fit: contain;" alt="img" class="card-img-top">' +
+                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none article-propietat-image">' +
+                        '<img src="' + imgAux + '" alt="img" class="card-img-top article-propietat-image">' +
                         '</a>' +
                         '<div class="col-12 justify-content-center row" >' +
                         '<div id="' + prop.id + '" class="row justify-content-evenly align-items-center col-12" ></div>' +
@@ -160,7 +160,7 @@
                         }
 
                         $('#' + prop.id).append(
-                            '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' + props.article.id + '/' + props.id + ' " class="text-decoration-none"> <img src="' + imgAux + '" style="max-height:50px; object-fit: contain;" alt="img" class="card-img-top"> </a> </div>'
+                            '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' + props.article.id + '/' + props.id + ' " class="text-decoration-none"> <img src="' + imgAux + '" alt="img" class="card-img-top article-propietat-image-min"> </a> </div>'
                         );
 
 
