--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -202,11 +202,13 @@
         }
     </script>
 
+    <script src="https://storage.googleapis.com/workbox-cdn/releases/6.3.0/workbox-sw.js"></script>
+    <script src="https://storage.googleapis.com/workbox-cdn/releases/6.3.0/workbox-window.prod.mjs"></script>
     <script type="module">
-        import {Workbox} from "/js/workbox/workbox-window.prod.mjs";
+        import {Workbox} from "https://storage.googleapis.com/workbox-cdn/releases/6.3.0/workbox-window.prod.mjs";
 
         if ("serviceWorker" in navigator) {
-            const wb = new Workbox("/js/workbox/pwa-serviceworker.js");
+            const wb = new Workbox("/sw.js");
             wb.register();
         }
     </script>
