--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -26,6 +26,7 @@
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <link rel="stylesheet" th:href="@{/css/pagination.css}">
         <link rel="stylesheet" th:href="@{/css/stars.css}">
+        <link rel="manifest" th:href="@{/manifest.json}" />
     </head>
 
 
