--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -247,7 +247,8 @@
                     type: "POST",
                     data: {destination: destination},
                     success: function (response) {
-                        var json = JSON.parse(response);
+                        console.log(response)
+                        var json = response;
                         if (json.rows[0].elements[0].status === "NOT_FOUND") {
                             $("#error").append("<div class=\"alert alert-danger d-flex justify-content-center align-items-center\" role=\"alert\">\n" +
                                 " <i class='bi bi-exclamation-triangle font-2'></i>" +
