--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
     <div th:replace="layout/layout.html :: jquery"></div>
     <script src="https://pagination.js.org/dist/2.5.0/pagination.js"></script>
     <script>
+        <!-- Recomendats -->
         $("#productos-recomendados").hide();
         $.ajax({
             url: "/api/propietats",
@@ -87,7 +88,7 @@
                             }
                             $('#articles-recomenats').append(
                                 '<a href="/article/' + prop[0].article.id + '/' + prop[0].id + '" class="col-xs-12 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
-                                '<img src="' + imgAux + '" alt="img" class="mt-2 index-propietat-image">' +
+                                '<img src="' + imgAux + '" style="width:150px; height:150px; object-fit: contain;" alt="img" class="mt-2">' +
                                 '<div class="col-12 justify-content-center row">' +
                                 '<div><p class="text-start h4 col-12">' + prop[0].article.nom + '</p></div>' +
                                 '<span class="text-start h2 text-pc-economic-default bold col-12">' + formatCurrency(prop[0].preu) + '</span>' +
@@ -103,6 +104,7 @@
             },
         });
 
+        <!-- Print -->
         $.ajax({
             url: "/api/propietats",
             type: "GET",
@@ -126,11 +128,11 @@
                     if (imgAux === "") {
                         imgAux = '/img/static/no-photo.png';
                     }
-                    if (prop.esPrincipal === true) {
+                    if (prop.esPrincipal === true && prop.article.marca.active === true) {
                         $('#articles').append(
                             '<div class="link-pc-economic-dark producte col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end justify-content-between border align-items-center text-decoration-none card-deck card align-items-start"  id="propietat' + prop.id + '" >' +
-                            '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none article-propietat-image">' +
-                            '<img src="' + imgAux + '" alt="img" class="card-img-top article-propietat-image">' +
+                            '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none" style="max-height:100px; margin:auto; object-fit: contain;">' +
+                            '<img src="' + imgAux + '" style="max-height:100px; margin:auto; object-fit: contain;" alt="img" class="card-img-top">' +
                             '</a>' +
                             '<div class="col-12 justify-content-center row" >' +
                             '<div id="' + prop.id + '" class="row justify-content-evenly align-items-center col-12" ></div>' +
@@ -144,60 +146,13 @@
                             '</div>'
                         );
                     }
-                },
-            });
-
-        },
-    });
-
-    <!-- Print -->
-    $.ajax({
-        url: "/api/propietats",
-        type: "GET",
-        contentType: "application/json",
-        beforeSend: function () {
-            $("#loading-wheel").show();
-        },
-        complete: function () {
-            $("#loading-wheel").remove();
-        },
-        success: function (resp) {
-            var imgAux = "";
-            var arrayCards = []
-            for (var prop of resp) {
-                imgAux = "";
-                for (var img of prop.imatges) {
-                    if (img.principal === true) {
-                        imgAux = '/img/productes/' + prop.article.id + '/' + prop.id + '/' + img.path;
-                    }
-                }
-                if (imgAux === "") {
-                    imgAux = '/img/static/no-photo.png';
-                }
-                if (prop.esPrincipal === true && prop.article.marca.active === true) {
-                    $('#articles').append(
-                        '<div class="link-pc-economic-dark producte col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end justify-content-between border align-items-center text-decoration-none card-deck card align-items-start"  id="propietat' + prop.id + '" >' +
-                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none" style="max-height:100px; margin:auto; object-fit: contain;">' +
-                        '<img src="' + imgAux + '" style="max-height:100px; margin:auto; object-fit: contain;" alt="img" class="card-img-top">' +
-                        '</a>' +
-                        '<div class="col-12 justify-content-center row" >' +
-                        '<div id="' + prop.id + '" class="row justify-content-evenly align-items-center col-12" ></div>' +
-                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none row">' +
-                        '<span class="text-start h5 col-12">' + prop.article.nom + '</span>' +
-                        '<span class="text-start h3 text-pc-economic-default bold col-12">' + formatCurrency(prop.preu) + '</span>' +
-                        '<span class="text-success col-12 text-start mb-1"> Recíbelo mañana </span>' +
-                        '</a>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>'
-                    );
-                }
-                for (props of resp) {
-                    if (props.esPrincipal === false && props.article.id === prop.article.id) {
-                        imgAux = "";
-                        for (var i of props.imatges) {
-                            if (i.principal === true) {
-                                imgAux = '/img/productes/' + prop.article.id + '/' + props.id + '/' + i.path;
+                    for (props of resp) {
+                        if (props.esPrincipal === false && props.article.id === prop.article.id) {
+                            imgAux = "";
+                            for (var i of props.imatges) {
+                                if (i.principal === true) {
+                                    imgAux = '/img/productes/' + prop.article.id + '/' + props.id + '/' + i.path;
+                                }
                             }
 
                             if (imgAux === "") {
@@ -205,7 +160,7 @@
                             }
 
                             $('#' + prop.id).append(
-                                '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' + props.article.id + '/' + props.id + ' " class="text-decoration-none"> <img src="' + imgAux + '" alt="img" class="card-img-top article-propietat-image-min"> </a> </div>'
+                                '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' + props.article.id + '/' + props.id + ' " class="text-decoration-none"> <img src="' + imgAux + '" style="max-height:50px; object-fit: contain;" alt="img" class="card-img-top"> </a> </div>'
                             );
 
 
@@ -222,7 +177,7 @@
                 $("#pagination").pagination({
                     dataSource: arrayCards,
                     pageSize: 8,
-                    formatResult: function (data) {
+                    formatResult: function(data) {
                         for (var i = 0, len = data.length; i < len; i++) {
                             data[i].a = data[i].a + ' - bad guys';
                         }
@@ -233,7 +188,6 @@
                         $("#articles").html(html);
                     }
                 })
-
                 function template(data) {
                     var html = ''
                     $.each(data, function (index, item) {
@@ -243,7 +197,6 @@
                 }
             },
         });
-
         function formatCurrency(amount) {
             return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
         }
