--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -26,7 +26,7 @@
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <link rel="stylesheet" th:href="@{/css/pagination.css}">
         <link rel="stylesheet" th:href="@{/css/stars.css}">
-        <link rel="manifest" th:href="@{/manifest.json}" />
+        <link rel="manifest" th:href="@{/manifest.json}"/>
     </head>
 
 
@@ -160,40 +160,15 @@
             class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container bg-cont"
             th:fragment="footer"
     >
-        <div class="row col-12">
-            <div class="col-xl-6 col-sm-12">
-                <p class="mb-0 text-muted">
-                    © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
-                    Tapereres, 32, 07500 Manacor, Balearic Islands
-                </p>
-            </div>
-            <div class="col-xl-6 col-sm-12">
-                <div id="map"></div>
-            </div>
+        <div class="row col-6">
+            <p class="mb-0 text-muted">
+                © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
+                Tapereres, 32, 07500 Manacor, Balearic Islands
+            </p>
         </div>
-
-        <script type="module">
-
-            function init() {
-                navigator.geolocation.getCurrentPosition((position) => {
-                    const myPos = {
-                        lat: 39.56165954084053,
-                        lng: 3.199846605521957,
-                    };
-                    const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 17,
-                        center: myPos,
-                    });
-                    const marker = new google.maps.Marker({
-                        position: myPos,
-                        map: map,
-                    });
-                });
-            }
-
-            window.inicialitza = init;
-        </script>
-        <script th:src="${googleapikey}" defer></script>
+        <div class="row col-6 justify-content-center">
+            <a class="btn btn-pc-economic-default col-3 text-center" th:href="@{/aboutus}">Sobre Nosotros</a>
+        </div>
     </footer>
     <div th:fragment="jquery">
         <script
