--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -190,9 +190,13 @@
                             propietats += v.propietat[0].nom + " " + v.valor + " ";
                         }
                         for (var i of prop.imatges) {
-                            if (i.principal) {
+                            if (i.principal && prop.article.marca.active === true) {
                                 $("#cercador").append(
                                     '<option data-image="/img/productes/' + prop.article.id + '/' + prop.id + '/' + i.path + '" value="/article/' + prop.article.id + '/' + prop.id + '"> ' + prop.article.nom + " " + propietats + "</option>"
+                                );
+                            } else if (prop.article.marca.active === true) {
+                                $("#cercador").append(
+                                    '<option data-image="/img/static/no-photo.png" value="/article/' + prop.article.id + '/' + prop.id + '"> ' + prop.article.nom + " " + propietats + "</option>"
                                 );
                             }
                         }
