fix: changed all styles tag to custom css classes on index

--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -120,7 +120,7 @@
                   '" class="col-xs-12 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
                   '<img src="' +
                   imgAux +
-                  '" style="width:150px; height:150px; object-fit: contain;" alt="img" class="mt-2">' +
+                  '" alt="img" class="mt-2 index-propietat-image">' +
                   '<div class="col-12 justify-content-center row">' +
                   '<div><p class="text-start h4 col-12">' +
                   prop[0].article.nom +
@@ -177,10 +177,10 @@
                 prop.article.id +
                 "/" +
                 prop.id +
-                '" class="text-decoration-none" style="max-height:100px; margin:auto; object-fit: contain;">' +
+                '" class="text-decoration-none article-propietat-image">' +
                 '<img src="' +
                 imgAux +
-                '" style="max-height:100px; margin:auto; object-fit: contain;" alt="img" class="card-img-top">' +
+                '" class="card-img-top article-propietat-image">' +
                 "</a>" +
                 '<div class="col-12 justify-content-center row" >' +
                 '<div id="' +
@@ -233,7 +233,7 @@
                   props.id +
                   ' " class="text-decoration-none"> <img src="' +
                   imgAux +
-                  '" style="max-height:50px; object-fit: contain;" alt="img" class="card-img-top"> </a> </div>'
+                  '" alt="img" class="card-img-top article-propietat-image-min"> </a> </div>'
               );
             }
           }
