--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -33,7 +33,7 @@
     <header th:fragment="header2" class="bg-pc-economic-light">
         <div class="container">
             <a class="col-12 d-flex justify-content-center text-center" href="/">
-                <img style="width:200px; height: 100px;object-fit: contain;" class="col-9"
+                <img class="col-9 logo-img"
                      src="/img/static/logo-no-background.png" alt="logo"/>
             </a>
         </div>
@@ -219,7 +219,7 @@
                             return opt.text;
                         } else {
                             var $opt = $(
-                                '<span><img src="' + optimage + '" width="15px" style="margin:auto; " /> ' + opt.text + '</span>'
+                                '<span><img src="' + optimage + '" width="15px" class="margin-auto"/> ' + opt.text + '</span>'
                             );
                             return $opt;
                         }
