--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -18,6 +18,11 @@
   font-weight: bold
 }
 
+.margin-auto {
+  margin: auto;
+}
+
+
 .margin-left-10 {
   margin-left: 10px;
 }
@@ -50,7 +55,7 @@
 }
 
 .display-none {
-    display: none;
+  display: none;
 }
 
 .size-card {
@@ -75,6 +80,12 @@
 .img-article {
   width: 100%;
   height: 400px;
+}
+
+.logo-img {
+  width: 200px;
+  height: 100px;
+  object-fit: contain;
 }
 
 .logo {
