--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" th:href="@{/css/pagination.css}">
         <link rel="stylesheet" th:href="@{/css/stars.css}">
         <link rel="manifest" th:href="@{/manifest.json}"/>
+        <link rel="apple-touch-icon" th:href="@{/img/static/logo-no-background.png}"/>
+        <link rel="icon" type="image/png" th:href="@{/img/static/logo-no-background.png}"/>
     </head>
 
     <header th:fragment="header2" class="bg-pc-economic-light">
