fix: about us footer button not being fully responsive

--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -168,7 +168,7 @@
             </p>
         </div>
         <div class="row col-6 justify-content-center">
-            <a class="btn btn-pc-economic-default col-3 text-center" th:href="@{/aboutus}">Sobre Nosotros</a>
+            <a class="btn btn-pc-economic-default col-sm-4 col-xl-3 text-center" th:href="@{/aboutus}">Sobre Nosotros</a>
         </div>
     </footer>
     <div th:fragment="jquery">
