--- a/public/PCEconomic/src/main/resources/templates/aboutus.html
+++ b/public/PCEconomic/src/main/resources/templates/aboutus.html
@@ -5,7 +5,7 @@
         <header th:replace="layout/layout :: navbar"></header>
         <main class="container bg-cont mt-5 p-3">
             <h1 class="text-center mt-2 mb-4">Sobre Nosotros</h1>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="row col-xl-6 col-sm-12">
                     <p>PCEconomic es una tienda online líder en la venta de productos con una relación calidad-precio
                         inigualable. Desde nuestro sitio web, ofrecemos una amplia gama de productos electrónicos,
