--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -28,13 +28,13 @@
         <link rel="stylesheet" th:href="@{/css/stars.css}">
         <link rel="manifest" th:href="@{/manifest.json}"/>
         <link rel="apple-touch-icon" th:href="@{/img/static/logo-no-background.png}"/>
-        <link rel="icon" type="image/png" th:href="@{/img/static/logo-no-background.png}"/>
+        <link rel="icon" type="image/png" th:href="@{/img/static/logo.png}"/>
     </head>
 
     <header th:fragment="header2" class="bg-pc-economic-light">
         <div class="container">
             <a class="col-12 d-flex justify-content-center text-center" href="/">
-                <img class="col-9 logo-img"
+                <img class="col-4 logo-img"
                      src="/img/static/logo-no-background.png" alt="logo"/>
             </a>
         </div>
