fix: fixed header2 logo not being correctly fitted

--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -34,8 +34,7 @@
     <header th:fragment="header2" class="bg-pc-economic-light">
         <div class="container">
             <a class="col-12 d-flex justify-content-center text-center" href="/">
-                <img class="col-4 logo-img"
-                     src="/img/static/logo-no-background.png" alt="logo"/>
+                <img class="col-3 logo-img" src="/img/static/logo-no-background.png" alt="logo"/>
             </a>
         </div>
     </header>
