--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -19,59 +19,60 @@
             <form class="col-sm-12 col-xl-5 needs-validation" th:action="@{/register}" th:object="${registerForm}" method="post"
                   novalidate>
                 <div class="row">
-                    <div class="col-12">
-                        <label class="form-label">Nombre</label>
-                        <input th:field="*{name}" type="text" class="form-control" placeholder="Nombre"
+                    <div class="col-12 mb-3">
+                        <label for="name" class="form-label">Nombre</label>
+                        <input th:field="*{name}" id="name" type="text" class="form-control" placeholder="Nombre"
                                aria-label="Name" required>
                         <div class="invalid-feedback">Porfavor, introduce un nombre.</div>
                     </div>
-                    <label class="form-label">Apellidos</label>
-                    <div class="col-6">
+                    <label for="surname1" class="form-label">Apellidos</label>
+                    <div class="col-6 mb-3">
                         <input th:field="*{surname1}" type="text" class="form-control" placeholder="Primer Apellido"
-                               aria-label="First name" required>
+                               aria-label="First name" id="surname1" required>
                         <div class="invalid-feedback">
                             Inserte su primer apellido.
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 mb-3">
                         <input th:field="*{surname2}" type="text" class="form-control" placeholder="Segundo Apellido"
                                aria-label="Last name">
                     </div>
-                    <div class="col-6">
-                        <label class="form-label">DNI</label>
+                    <div class="col-6 mb-3">
+                        <label for="dni" class="form-label">DNI</label>
                         <input th:field="*{dni}" type="text" class="form-control" placeholder="DNI"
-                               aria-label="DNI" required>
+                               aria-label="DNI" required id="dni">
                         <div class="invalid-feedback">
                             Inserte su DNI.
                         </div>
                     </div>
-                    <div class="col-6">
-                        <label class="form-label">Telefono</label>
+                    <div class="col-6 mb-3">
+                        <label for="telephone" class="form-label">Telefono</label>
                         <input th:field="*{telefon}" type="text" class="form-control" placeholder="Telefono"
-                               aria-label="Telefon" required>
+                               aria-label="Telefon" required id="telephone">
                         <div class="invalid-feedback">
                             Inserte su telefono.
                         </div>
                     </div>
-                    <div class="col-12">
-                        <label class="form-label">Correo Electronico</label>
+                    <div class="col-12 mb-3">
+                        <label for="email" class="form-label">Correo Electronico</label>
                         <input th:field="*{email}" type="text" class="form-control" placeholder="Correo Electronico"
-                               aria-label="Email Address" required>
+                               aria-label="Email Address" required id="email">
                         <div class="invalid-feedback">
                             Inserte su correo electronico.
                         </div>
                     </div>
-                    <div class="col-6">
-                        <label class="form-label">Contraseña</label>
+                    <div class="col-6 mb-3">
+                        <label for="password" class="form-label">Contraseña</label>
                         <input th:field="*{password}" type="password" class="form-control" placeholder="Contraseña"
-                               aria-label="Contraseña" required>
+                               aria-label="Contraseña" required id="password">
                         <div class="invalid-feedback">
                             Inserte su contraseña.
                         </div>
                     </div>
-                    <div class="col-6">
-                        <label class="form-label">Confirmar Contraseña</label>
+                    <div class="col-6 mb-3">
+                        <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
                         <input th:field="*{confirmPassword}" type="password" class="form-control"
+                               id="confirmPassword"
                                placeholder="Confirmar Contraseña"
                                aria-label="Confirmar Contraseña" required>
                         <div class="invalid-feedback">
