--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -94,18 +94,10 @@
                                 <ul class="dropdown-menu" id="menu-login">
                                     <li><a class="dropdown-item" href="/areaclients">Mi Area de Cliente</a></li>
                                     <li>
-                                        <a class="dropdown-item" th:href="${admin_part} + '?token='+${token}" th:each="rol : ${rols}" th:if="${rol.name == 'ADMINISTRADOR'}">Gestionar
-                                            Productos</a></li>
-                                    <li><a class="dropdown-item" href="/logout">Cerrar Session</a></li>
+                                        <a class="dropdown-item" th:href="${admin_part} + '?token='+${token}" th:each="rol : ${rols}" th:if="${rol.name == 'ADMINISTRADOR'}">Gestión de Productos</a></li>
+                                    <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
                                 </ul>
                             </div>
-                        </li>
-
-                        <li class="nav-item d-flex justify-content-center ">
-                            <button aria-label="Cambiar idioma" type="button" class="nav-link btn btn-pc-economic-dark mt-1" data-bs-toggle="modal"
-                                    data-bs-target="#modal" data-bs-tool="tooltip" data-bs-title="Cambiar Idioma">
-                                <i class="bi bi-translate"></i>
-                            </button>
                         </li>
                         <li class="nav-item d-flex justify-content-center ">
                             <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/carrito}" data-bs-tool="tooltip" data-bs-title="Ver carrito de la compra">
